--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <script>
         var map = L.map('map', {
             zoomControl:false, maxZoom:28, minZoom:1
-        }).fitBounds([[28.63684172015347,-91.30638690804517],[40.22595094695245,-80.30049584038704]]);
+        }).setView([38.324, -99.516], 5);
         
         var legend = L.control({ position: 'bottomright' });
 
