--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
         title.onAdd = function () {
             var div = L.DomUtil.create('div', 'leaflet-title');
-            div.innerHTML = "<h1>Cheese's Pony Map</h1><h3>Pony Conventions/Events of North America</h3>";
+            div.innerHTML = "<h1>Cheese's Pony Map (NA)</h1><h3>Pony Conventions/Events of North America</h3>";
             return div;
         };
 
